# sentimentlab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sentimentlab/: __init__.py  cli.py
src/sentimentlab/analysis/: __init__.py  loader.py  tests.py
src/sentimentlab/formatters/: __init__.py  ohlcv.py  price.py  ticker.py  volume.py
src/sentimentlab/parsers/: __init__.py  currency.py  timestamp.py
src/sentimentlab/utils/: __init__.py  sample_data.py  summary.py  validation.py
tests/: test_analysis.py
